feature: support Redhat distros

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,7 +1,11 @@
 ---
-- name: handler_restart_fail2ban
-  systemd:
+# --------------------------------
+
+- name: HandlerRestartFail2ban
+  ansible.builtin.systemd:
     state: restarted
-    name: '{{fail2ban_svc_name}}'
+    name: '{{ fail2ban_svc_name }}'
   become: true
+
+# --------------------------------
 ...
