--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,37 +1,31 @@
 ---
+# --------------------------------
 
-- name: 'install packages (with update)'
-  apt:
-    name: '{{fail2ban_pkgs}}'
-    state: '{{fail2ban_state}}'
-    update_cache: '{{fail2ban_refresh_cache}}'
-  become: true
-  tags:
-  - ct-fail2ban
+- include_tasks: setup-redhat.yml
+  when: ct_family == "redhat"
 
-- name: 'render jail.local config'
-  template:
+- include_tasks: setup-debian.yml
+  when: ct_family == "debian"
+
+- name: "Render jail.local config"
+  ansible.builtin.template:
     src: jail.local.j2
     dest: /etc/fail2ban/jail.local
     owner: root
     group: root
-    mode: '0600'
+    mode: "0600"
   register: reg_config
-  notify: handler_restart_fail2ban
+  notify: HandlerRestartFail2ban
   become: true
-  tags:
-  - ct-fail2ban
-  - ct-fail2ban-cfg
+  tags: ["ct-fail2ban"]
 
-- name: 'configure {{fail2ban_svc_name}} service'
-  systemd:
-    name: '{{fail2ban_svc_name}}'
-    state: '{{fail2ban_svc_state}}'
-    enabled: '{{fail2ban_svc_enabled}}'
+- name: "Configure {{ fail2ban_svc_name }} service"
+  ansible.builtin.systemd:
+    name: "{{ fail2ban_svc_name }}"
+    state: "{{ fail2ban_svc_state }}"
+    enabled: "{{ fail2ban_svc_enabled }}"
   become: true
-  tags:
-  - ct-fail2ban
-  - ct-fail2ban-systemd
+  tags: ["ct-fail2ban"]
 
 # --------------------------------
 ...
