--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,3 +1,6 @@
 ---
-dependencies: []
+dependencies:
+- src: git+https://github.com/cabtech/ansible-role-util-facts.git
+  tags: ["ct-fail2ban"]
+  version: "1.1.0"
 ...
