chore: bump dependency version

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 ---
 dependencies:
 - src: git+https://github.com/cabtech/ansible-role-util-facts.git
-  tags: ["ct-fail2ban"]
-  version: "1.2.0"
+  tags: [ct-fail2ban]
+  version: "1.2.2"
 ...
