chore: install inetutils-syslogd instead of rsyslogd

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,7 +2,7 @@
 fail2ban_ignoreip: ""
 fail2ban_ignore_addrs: []
 fail2ban_pkgs_common:
-  debian: ["python3-apt", "fail2ban", "rsyslog"]
+  debian: ["python3-apt", "fail2ban", "inetutils-syslogd"]
   redhat: ["fail2ban"]
 fail2ban_refresh_cache: true
 fail2ban_state: present
